<resources>
    <string name="app_name">MyCatering</string>
    <string name="activity_main_name">List of orders</string>
    <string name="activity_main_toolbar_title">List of orders</string>
    <string name="fragment_detal_action_add">Delete</string>
    <string name="drawer_home">MyCatering</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_about">About</string>
    <string name="drawer_home_long">Show all orders</string>
    <string name="drawer_Settings_long">Change app settings</string>
    <string name="drawer_about_long">About App</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="dialog_about_title"> About</string>
    <string name="dialog_about_message"> Vesna Tanaskovic made MyCatering</string>
    <string name="dialog_about_yes">OK</string>
    <string name="dialog_about_no">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="splash_screen">Splash screen</string>
    <string name="notification_title">Item ordered</string>
    <string name="notification_text">The selected item has been ordered</string>
    <string name="list_heading">List of Orders</string>
    <string name="activity_item_detal_action_add">Add</string>
    <string name="dialog_title">Close App</string>
    <string name="dialog_message">Do you want to close MyCatering Application?</string>
    <string name="dialog_close">Close</string>
    <string name="category_type1">Salty&#160;&#160;</string>
    <string name="category_type2">Sweet&#160;&#160;</string>
    <string name="other"> </string>
    <string name="product">Product</string>
    <string name="description">Description</string>
    <string name="dialog_add_item_title">Add product</string>
    <string name="dailog_image">Image</string>
    <string name="dialog_category">Category</string>
    <string name="button_add">Add</string>
    <string name="button_cancel">Cancel</string>
    <string name="dialog_image">Image</string>
    <string name="button_edit">Edit</string>
    <string name="dialog_title_delete">Delete</string>
    <string name="dialog_message_delete">Do you want to delete item?</string>
    <string name="add_item">New item is added</string>
    <string name="ordered_item">New item is ordered</string>
    <string name="item_delete">Item is deleted</string>
    <string name="item_edit">Item is updated</string>
    <string name="price">Price:</string>
    <string name="exception_price">Price field is essential to fill. In case zero value, enter .0</string>
    <string name="exception_name">Product name field is essential to fill</string>
</resources>
